settlement test debug endpoint
